--- a/.github/workflows/generate-sitemaps.yml
+++ b/.github/workflows/generate-sitemaps.yml
@@ -50,4 +50,4 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add sitemap.xml image-sitemap.xml
           git commit -m "Auto-update sitemaps [skip ci]"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
