--- a/.github/workflows/generate-sitemaps.yml
+++ b/.github/workflows/generate-sitemaps.yml
@@ -22,6 +22,8 @@ on:
 jobs:
   generate-sitemaps:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout repository
@@ -50,4 +52,4 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add sitemap.xml image-sitemap.xml
           git commit -m "Auto-update sitemaps [skip ci]"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
+          git push
