--- a/.github/workflows/generate-sitemaps.yml
+++ b/.github/workflows/generate-sitemaps.yml
@@ -5,50 +5,33 @@ on:
     branches:
       - main
       - master
-    paths:
-      - 'trurail-simulations/**/*.html'
-      - 'uts-creations/**/*.html'
-      - 'cleartracks/**/*.html'
-      - 'index.html'
-      - 'contributors.html'
-      - 'support.html'
-      - 'search.html'
-      - 'files.html'
-      - 'privacy.html'
-      - 'terms.html'
-      - 'media/**'
-  workflow_dispatch:  # Allow manual trigger
+  workflow_dispatch:
 
 jobs:
   generate-sitemaps:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          
+      
       - name: Generate sitemaps
+        run: node scripts/generate-sitemaps.js
+      
+      - name: Check git status
+        run: git status
+      
+      - name: Commit and push
         run: |
-          node scripts/generate-sitemaps.js
-        
-      - name: Check if sitemaps changed
-        id: git-check
-        run: |
-          git diff --exit-code sitemap.xml image-sitemap.xml || echo "changed=true" >> $GITHUB_OUTPUT
-          
-      - name: Commit and push if changed
-        if: steps.git-check.outputs.changed == 'true'
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add sitemap.xml image-sitemap.xml
-          git commit -m "Auto-update sitemaps [skip ci]"
+          git commit -m "chore: auto-generate sitemaps" || true
           git push
